--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
     "chart.js": "^2.8.0",
-    "puppeteer": "^1.19.0",
+    "chartjs": "^0.3.24",
+    "puppeteer": "^1.20.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
